--- a/about-me.html
+++ b/about-me.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Antonio Vallejo</title>
+  <title>About Me - Antonio Vallejo</title>
   <meta name="author" content="Antonio Vallejo">
   <meta name="description" content="Official page of Antonio Vallejo, Industrial Engineering Student and Software Developer.">
   <link rel="stylesheet" href="./css/main.css">
@@ -13,9 +14,8 @@
   <link href="./css/bootstrap.min.css" rel="stylesheet" />
   <link href="./css/now-ui-kit.css?v=1.2.0" rel="stylesheet" />
 </head>
-<!-- <body class="burger-menu menu-on-left"> para ver como va en moviles-->
+
 <body>
-  <!-- color on scroll son los pixeles en los que cambia de transparente al color -->
   <nav class="navbar navbar-expand-lg navbar-transparent fixed-top" color-on-scroll='100'>
     <div class="container">
       <a class="navbar-brand" href="#">Antonio Vallejo Fernandez</a>
@@ -25,29 +25,29 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="./index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./about-me.html">About Me</a>
+            <a class="nav-link" href="./about-me.html">About Me<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./resume.html">Resume</a>
           </li>
-          <li class="nav-item dropdown">
+          <li class="nav-item">
             <a class="nav-link" href="./contact.html">Contact</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
-  <br><br><br>
-  <div class="container">
-
   </div>
+
+
   <script src="./js/core/jquery.min.js" type="text/javascript"></script>
   <script src="./js/core/popper.min.js" type="text/javascript"></script>
   <script src="./js/core/bootstrap.min.js" type="text/javascript"></script>
   <script src="./js/now-ui-kit.js?v=1.2.0" type="text/javascript"></script>
   <script src="./js/main.js"></script>
 </body>
+
 </html>
