--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,6 +15,7 @@
   <link href="./css/now-ui-kit.css?v=1.2.0" rel="stylesheet" />
 </head>
 <!-- <body class="burger-menu menu-on-left"> para ver como va en moviles-->
+
 <body>
   <!-- color on scroll son los pixeles en los que cambia de transparente al color -->
   <nav class="navbar navbar-expand-lg navbar-transparent fixed-top" color-on-scroll='100'>
@@ -25,7 +27,7 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./about-me.html">About Me</a>
@@ -41,13 +43,11 @@
     </div>
   </nav>
   <br><br><br>
-  <div class="container">
-
-  </div>
-  <script src="./js/core/jquery.min.js" type="text/javascript"></script>
-  <script src="./js/core/popper.min.js" type="text/javascript"></script>
-  <script src="./js/core/bootstrap.min.js" type="text/javascript"></script>
-  <script src="./js/now-ui-kit.js?v=1.2.0" type="text/javascript"></script>
-  <script src="./js/main.js"></script>
+    <script src="./js/core/jquery.min.js" type="text/javascript"></script>
+    <script src="./js/core/popper.min.js" type="text/javascript"></script>
+    <script src="./js/core/bootstrap.min.js" type="text/javascript"></script>
+    <script src="./js/now-ui-kit.js?v=1.2.0" type="text/javascript"></script>
+    <script src="./js/main.js"></script>
 </body>
+
 </html>
