--- a/contact.html
+++ b/contact.html
@@ -26,8 +26,8 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
+          <li class="nav-item">
+            <a class="nav-link" href="./index.html">Home </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./about-me.html">About Me</a>
@@ -35,8 +35,8 @@
           <li class="nav-item">
             <a class="nav-link" href="./resume.html">Resume</a>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link" href="./contact.html">Contact</a>
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Contact<span class="sr-only">(current)</span></a>
           </li>
         </ul>
       </div>
