--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <li class="nav-item">
             <a class="nav-link" href="./resume.html">Resume</a>
           </li>
-          <li class="nav-item dropdown">
+          <li class="nav-item">
             <a class="nav-link" href="./contact.html">Contact</a>
           </li>
         </ul>
@@ -42,7 +42,23 @@
   </nav>
   <br><br><br>
   <div class="container">
-
+    <div class="row justify-content-center">
+      <div class="col-8 align-self-center">
+        <h1 class="title">Hello, welcome to my page!</h1>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <h2 class="subtitle">Interested in something?</h2>
+        <h2 class="subtitle">Click down here or on top of the page for more info!</h2>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-12 botones">
+        <button class="btn"id="abbutton">About Me</button>
+        <button class="btn"id="resbutton">Resume</button>
+      </div>
+    </div>
   </div>
   <script src="./js/core/jquery.min.js" type="text/javascript"></script>
   <script src="./js/core/popper.min.js" type="text/javascript"></script>
