--- a/resume.html
+++ b/resume.html
@@ -31,16 +31,16 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
+          <li class="nav-item">
+            <a class="nav-link" href="./index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./about-me.html">About Me</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./resume.html">Resume</a>
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Resume<span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item dropdown">
+          <li class="nav-item">
             <a class="nav-link" href="./contact.html">Contact</a>
           </li>
         </ul>
