Changes to contact, main. Added favicon. Logo testing

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Antonio Vallejo</title>
   <meta name="author" content="Antonio Vallejo">
   <meta name="description" content="Official page of Antonio Vallejo, Industrial Engineering Student and Software Developer.">
+  <link rel="shortcut icon" href="./img/favicon.png">
   <link rel="stylesheet" href="./css/main.css">
   <link rel="stylesheet" href="./css/animate.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
