--- a/resume.html
+++ b/resume.html
@@ -8,6 +8,7 @@
   <title>Antonio Vallejo</title>
   <meta name="author" content="Antonio Vallejo">
   <meta name="description" content="Official page of Antonio Vallejo, Industrial Engineering Student and Software Developer.">
+  <link rel="shortcut icon" href="./img/favicon.png">
   <link rel="stylesheet" href="./css/main.css">
   <link rel="stylesheet" href="./css/animate.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
@@ -25,7 +26,7 @@
   <!-- color on scroll son los pixeles en los que cambia de transparente al color -->
   <nav class="navbar navbar-expand-lg navbar-transparent fixed-top" color-on-scroll='100'>
     <div class="container">
-      <a class="navbar-brand" href="#">Antonio Vallejo Fernandez</a>
+      <a class="navbar-brand" href="#"> <img src="./img/Logo.png" width="40" height="40" alt="Antonio Vallejo Fernández"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fas fa-bars"></i>
       </button>
@@ -53,7 +54,7 @@
     <div class="container">
       <div class="row justify-content-md-center">
         <div class="col-md-auto">
-          <h2 id="PDF">PDF W VERSION</h2>
+          <h3 id="PDF"><a href="#">PREFER THE PDF VERSION? CLICK HERE</a></h3>
         </div>
       </div>
     </div>
@@ -99,7 +100,7 @@
           <div class="card-body movimiento">
             <div class="tab-content text-center">
               <div class="tab-pane fade" id="experience">
-                <p>INDRA</p>
+                <h4 class="resitem">INDRA</h4>
               </div>
               <div class="tab-pane fade" id="education">
                 <p>LASALLE</p>
