--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
   <title>Antonio Vallejo</title>
   <meta name="author" content="Antonio Vallejo">
   <meta name="description" content="Official page of Antonio Vallejo, Industrial Engineering Student and Software Developer.">
+  <link rel="shortcut icon" href="./img/favicon.png"> 
   <link rel="stylesheet" href="./css/main.css">
   <link rel="stylesheet" href="./css/animate.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
@@ -20,14 +21,14 @@
   <!-- color on scroll son los pixeles en los que cambia de transparente al color -->
   <nav class="navbar navbar-expand-lg navbar-transparent fixed-top" color-on-scroll='100'>
     <div class="container">
-      <a class="navbar-brand" href="#">Antonio Vallejo Fernandez</a>
+      <a class="navbar-brand" href="#"> <img src="./img/Logo.png" width="100" height="100" alt="Antonio Vallejo Fernández"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fas fa-bars"></i>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="./index.html">Home </a>
+            <a class="nav-link" href="./index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./about-me.html">About Me</a>
@@ -43,6 +44,7 @@
     </div>
   </nav>
   <br><br><br>
+  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt corporis ab sed animi vel ullam expedita voluptatibus totam! Minima voluptates iure ipsum hic quasi porro. Magnam quam quo, labore deleniti consequuntur perferendis, nihil est cupiditate adipisci, quibusdam ducimus reiciendis placeat! Corrupti provident eligendi quas laboriosam ad velit culpa voluptate harum perferendis temporibus odio ut quidem suscipit architecto vel error placeat reprehenderit quia mollitia iste modi et, asperiores alias. Nemo saepe repellendus doloremque, ducimus fuga ipsam totam, voluptatibus dolores obcaecati dolorum earum eveniet ut veniam ullam eaque dolor eligendi nulla omnis, soluta asperiores nobis error alias adipisci. Architecto ab, temporibus commodi ex. Iusto velit fuga dolorum nobis quo veritatis inventore ratione soluta accusamus rem, explicabo excepturi odio assumenda, corporis blanditiis? Reiciendis fugit perferendis, ut itaque. Libero soluta voluptatum natus dicta in iste, tenetur, animi, voluptates corporis ipsam blanditiis? Neque vitae vero, eum aperiam est numquam natus, sequi laborum perferendis nihil velit distinctio alias rerum ullam id tempore ipsa voluptatum esse, officiis repudiandae aliquam totam quaerat labore. Quidem in nam voluptatibus aperiam quisquam, laudantium hic libero odit aut quam ut aliquid, placeat neque deserunt qui non cumque ullam, unde nisi aspernatur ad! Magni quam, mollitia facere nihil velit eaque? Doloremque aliquam reiciendis consectetur sapiente, distinctio quisquam nulla inventore, et nisi rem iure repellendus. Praesentium aperiam illum at ex corporis commodi eum deleniti enim provident vel ut dignissimos quibusdam quaerat magni doloremque voluptate quidem hic delectus sed minima incidunt a, officiis nobis. Velit dolores sunt iure facilis autem ullam sit laudantium illo magni perspiciatis numquam, inventore atque labore reiciendis consequuntur quisquam aperiam quasi temporibus obcaecati perferendis praesentium! Soluta eveniet rerum quas dignissimos debitis! Esse repellendus reiciendis aut cupiditate perspiciatis incidunt necessitatibus alias, illo ea reprehenderit consectetur earum facilis, mollitia possimus quia, excepturi iste odit eveniet laborum maiores praesentium? Error quasi placeat ipsam perferendis nostrum velit necessitatibus delectus iusto, ea sed repellat facere eos similique assumenda, voluptas, omnis, est natus! Provident, saepe architecto error praesentium ut enim, dicta, quas iusto eveniet aliquam a voluptatem reprehenderit sequi deserunt cupiditate commodi doloremque quos pariatur. Sint incidunt architecto sit, aperiam quo eligendi hic consequuntur recusandae iste ex eos ipsa asperiores eaque, quas perferendis delectus aut nobis molestiae illo velit! Praesentium molestias assumenda eum veritatis expedita ex, minus quod, numquam voluptatibus quidem pariatur nam! Officiis nemo recusandae cumque dolorum cum, labore tempora laudantium magnam ratione a dolorem facere quis maxime similique voluptatem, natus optio eveniet eius distinctio. Dolorem harum, aperiam odio saepe obcaecati eaque nobis sapiente deleniti aliquam eum debitis rem dolorum laboriosam, quo ratione dolore a. Veniam dolores reiciendis, aliquid consequuntur ipsa minima rem molestiae quisquam cum temporibus aut veritatis. Porro animi natus eligendi quaerat, ad quisquam fugiat quia fuga nobis mollitia esse, quam soluta dolore sapiente, voluptates illo distinctio at obcaecati assumenda deleniti maiores quidem cumque rerum. Nobis obcaecati expedita doloribus rerum! Molestiae illum eum a doloribus, nam aut et quis nobis placeat dolores tenetur numquam iste similique beatae deserunt, voluptas soluta commodi pariatur voluptate voluptatibus rerum quos ad explicabo. Aliquam, nemo! Ducimus inventore reprehenderit necessitatibus.
     <script src="./js/core/jquery.min.js" type="text/javascript"></script>
     <script src="./js/core/popper.min.js" type="text/javascript"></script>
     <script src="./js/core/bootstrap.min.js" type="text/javascript"></script>
