--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 </head>
 <!-- <body class="burger-menu menu-on-left"> para ver como va en moviles-->
 <body>
-  <!-- color on scroll son los pixeles en los que cambia de transparente al color -->
+  <a href="#" ><img class="logo" src="./img/Logo.png"alt="Antonio Vallejo Fernández"></a>
   <nav class="navbar navbar-expand-lg navbar-transparent fixed-top" color-on-scroll='100'>
     <div class="container">
-      <a class="navbar-brand" href="#">Antonio Vallejo Fernandez</a>
+      <a class="navbar-brand" href="#"> <img src="./img/Logo.png" width="40" height="40" alt="Antonio Vallejo Fernández"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <i class="fas fa-bars"></i>
       </button>
