Finished resume and contact.

--- a/resume.html
+++ b/resume.html
@@ -24,7 +24,7 @@
 <!-- <body class="burger-menu menu-on-left"> para ver como va en moviles-->
 
 <body>
-  <a href="#"><img class="logo" src="./img/Logo.png" alt="Antonio Vallejo Fernández"></a>
+  <a href="www.tonivallejo.com"><img class="logo" src="./img/Logo.png" alt="Antonio Vallejo Fernández"></a>
   <nav class="navbar navbar-expand-lg navbar-transparent fixed-top" color-on-scroll='100'>
     <div class="container">
       <a class="navbar-brand" href="#"> <img src="./img/Logo.png" width="40" height="40" alt="Antonio Vallejo Fernández"></a>
@@ -55,7 +55,7 @@
     <div class="container">
       <div class="row justify-content-md-center">
         <div class="col-md-auto">
-          <h3 id="PDF"><a href="#">PREFER THE PDF VERSION? CLICK HERE</a></h3>
+          <h3 id="PDF"><a href="#"data-toggle="tooltip" data-placement="bottom" title="Sorry! Currently unavailable.">PREFER THE PDF VERSION? CLICK HERE</a></h3>
         </div>
       </div>
     </div>
@@ -202,6 +202,25 @@
                       <div class="collapse" id="collapseMIT">
                         <div class="card card-body">
                           <img src="./img/MITxCertificate.png" alt="">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row job-title">
+                    <div class="col">
+                      <h4 class="resitem">First Certificate in English – University of Cambridge.</h4>
+                      <div class="duration">2013</div>
+                      <p class="job-description">
+                        Official certification by the University of Cambridge regarding the English language.
+                      </p>
+                      <p>
+                        <button class="btn btn-info btn-sm" type="button" data-toggle="collapse" data-target="#collapseFirst" aria-expanded="false" aria-controls="collapseFirst">
+                          See Certificate
+                        </button>
+                      </p>
+                      <div class="collapse" id="collapseFirst">
+                        <div class="card card-body">
+                          <img src="./img/FIRSTCERTIFICATE.jpg" alt="">
                         </div>
                       </div>
                     </div>
@@ -363,14 +382,36 @@
             <div class="tab-pane fade" id="interskills">
               <div class="container">
                 <div class="row">
-                  <div class="col">
-                    
+                  <div class="col teamwork">
+                    <h4 style="text-decoration: underline;">TEAMWORK</h4>
+                    <p>Active listener</p>
+                    <p>Collaborative</p>
+                    <p>Accepts feedback</p>
+                    <p>Respectful</p>
+                  </div>
+                  <div class="col posattitude">
+                    <h4 style="text-decoration: underline;">POSITIVE ATTITUDE</h4>
+                    <p>Friendly</p>
+                    <p>Encouraging</p>
+                    <p>Motivated</p>
+                    <p>Energetic</p>
                   </div>
                 </div>
 
                 <div class="row">
-                  <div class="col">
-
+                  <div class="col critthink">
+                    <h4 style="text-decoration: underline;">CRITICAL THINKING</h4>
+                    <p>Adaptable</p>
+                    <p>Creative</p>
+                    <p>Observant</p>
+                    <p>Resourceful</p>
+                  </div>
+                  <div class="col communication">
+                    <h4 style="text-decoration: underline;">COMMUNICATION</h4>
+                    <p>Public speaker</p>
+                    <p>Visual communicator</p>
+                    <p>Polite</p>
+                    <p>Empathetic</p>
                   </div>
                 </div>
 
