--- a/about-me.html
+++ b/about-me.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <a href="#" ><img class="logo" src="./img/Logo.png"alt="Antonio Vallejo Fernández"></a>
+  <a href="www.tonivallejo.com" ><img class="logo" src="./img/Logo.png"alt="Antonio Vallejo Fernández"></a>
   <nav class="navbar navbar-expand-lg navbar-transparent fixed-top" color-on-scroll='100'>
     <div class="container">
       <a class="navbar-brand" href="#"> <img src="./img/Logo.png" width="40" height="40" alt="Antonio Vallejo Fernández"></a>
