--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-8 align-self-center">
-        <h1 class="title">Hello, welcome to my page!</h1>
+        <h1 class="title">Welcome to my page!</h1>
       </div>
     </div>
     <div class="row">
