--- a/about-me.html
+++ b/about-me.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <a href="www.tonivallejo.com" ><img class="logo" src="./img/Logo.png"alt="Antonio Vallejo Fernández"></a>
+  <a href="www.tonivallejo.com"><img class="logo" src="./img/Logo.png" alt="Antonio Vallejo Fernández"></a>
   <nav class="navbar navbar-expand-lg navbar-transparent fixed-top" color-on-scroll='100'>
     <div class="container">
       <a class="navbar-brand" href="#"> <img src="./img/Logo.png" width="40" height="40" alt="Antonio Vallejo Fernández"></a>
@@ -42,8 +42,151 @@
       </div>
     </div>
   </nav>
-  </div>
+  <br>
+  <section class="header">
+    <div class="container container-about">
+      <div class="row">
+        <div class="col col-about">
+          <img src="img\IMG_20180814_142755_1.jpg" alt="">
+        </div>
+        <div class="col col-about align-self-center">
+          <h2>
+            Greetings!
+            My name is Antonio Vallejo Fernández and I'm an Industrial Engineering Student in Madrid, Spain.
+          </h2>
+        </div>
+      </div>
+    </div>
+  </section>
 
+  <section id='about1'>
+    <div class="container container-about">
+      <div class="row">
+        <div class="col col-about">
+          <h2>I love programming, robots and everything technology-related.
+          </h2>
+          <h3>My current employer is Indra, one of the best tech companies in Spain, where my team and I work to develop OCR aplications.
+          </h3>
+        </div>
+        <div class="col col-about">
+          <video muted loop src="img\3D.mp4" autoplay class="imp3D">
+          </video>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section id="about2">
+    <div class="container">
+      <div class="row justify-content-center">
+        <h2>I deeply enjoy traveling and learning about other cultures! That's one of the reasons I like learning foreign languages.
+        </h2>
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner" role="listbox">
+            <div class="carousel-item">
+              <img class="d-block" src="img\IMG_20180816_094654.jpg" alt="First slide">
+              <div class="carousel-caption d-none d-md-block">
+                <h5 class="pics">Kyoto Imperial Palace - Kyoto, Japan</h5>
+              </div>
+            </div>
+            <div class="carousel-item active">
+              <img class="d-block" src="img\IMG_20180812_121359834_HDR.jpg" alt="Second slide">
+              <div class="carousel-caption d-none d-md-block">
+                <h5 class="pics">Himeji Castle - Himeji, Japan</h5>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block" src="img\IMG_20170720_174951317.jpg" alt="Third slide">
+              <div class="carousel-caption d-none d-md-block">
+                <h5 class="pics">Belém Tower - Lisbon, Portugal</h5>
+              </div>
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <i class="fas fa-angle-left fa-3x"></i>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <i class="fas fa-angle-right fa-3x"></i>
+          </a>
+        </div>
+      </div>
+      <div class="row">
+        <!-- Carousel con las fotos de los viajes -->
+      </div>
+    </div>
+  </section>
+  <section id="about3">
+    <div class="container">
+      <div class="row">
+        <h2>In my free time, I enjoy playing music on my piano or my guitar.
+        I've been playing guitar for quite a while, but I took piano only recently and I've fallen in love with it.
+        <!-- Fotos tocando -->
+        <div class="row justify-content-center">
+
+        <div class="col-3">
+          <img src="img\guitar.png" alt="">
+        </div>
+        <div class="col-3">
+          <img src="img\piano.png" alt="">
+        </div>
+      </div>
+      </h2>
+        <h2>
+          I'm also a very active person, I adore sports. I've done karate almost all my life and also played basketball in the high school team.
+        </h2>
+      </div>
+    </div>
+  </section>
+  <section id="about4">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <img src="img\IMG_20181106_210710647.jpg" alt="">
+        </div>
+        <div class="col  align-self-center">
+          <h2>
+            Since I was young I always loved animals. My family has two adorable rescued cats.
+            </h2>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section>
+    <div class="container-fluid p-0 sixpicscont">
+      <!-- En un futuro se pueden poner 8 en vez de 6 el fluid ajusta el tamaño-->
+      <div class="row">
+        <div class="col"><img class="sixpics"src="img\IMG_20180116_180312492.jpg" alt=""></div>
+        <div class="col"><img class="sixpics"src="img\IMG_20190101_024021739.jpg" alt=""></div>
+        <div class="col"><img class="sixpics"src="img\IMG-20180415-WA0005.jpg" alt=""></div>
+
+      </div>
+
+        <div class="row">
+          <div class="col"><img class="sixpics"src="img\IMG-20181101-WA0004.jpg" alt=""></div>
+          <div class="col"><img class="sixpics"src="img\IMG_20180721_190301639.jpg" alt=""></div>
+          <div class="col"><img class="sixpics"src="img\IMG-20190107-WA0002.jpg" alt=""></div>
+        </div>
+
+      <div class="row">
+  </section>
+  <section id="about5">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <h3>Do you want to see the professional aspect of my life?</h3>
+          <button class="btn" id="resbutton">Resume</button>
+        </div>
+        <div class="col">
+          <h3>Did you like what you saw and want to tell me something?</h3>
+          <button class="btn" id="contbutton">Contact</button>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <script src="./js/core/jquery.min.js" type="text/javascript"></script>
   <script src="./js/core/popper.min.js" type="text/javascript"></script>
