--- a/resume.html
+++ b/resume.html
@@ -117,7 +117,7 @@
                       OCR design and optimization.
                     </div>
                     <div class="col">
-                      Neural Network programming and training.
+                    Android and iOS compatibility.
                     </div>
                   </div>
 
@@ -132,10 +132,10 @@
 
                   <div class="row row-margin">
                     <div class="col">
-                      Back-End development.
+                      Back-End development with <b>Java</b>.
                     </div>
                     <div class="col">
-                      Database programming with <b>PL/SQL</b>.
+                      Database programming and manipulation.
                     </div>
                   </div>
 
@@ -324,7 +324,7 @@
                     <div class="card-header" role="tab" id="headingThree">
                       <i class="fas fa-code icono-techskills"></i>
                       <a class="collapsed skill" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                        Application development
+                        Application and web development
 
                         <i class="fas fa-angle-down"></i>
                       </a>
@@ -332,7 +332,7 @@
                     <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="headingThree">
                       <div class="card-body">
                         <ul class="list-group">
-                          <li class="list-group-item list-group-item-secondary">Front-End and Back-End development. Use of HTML/CSS, JavaScript, jQuery, bootstrap, Angular and Apache Cordova.</li>
+                          <li class="list-group-item list-group-item-secondary">Front-End and Back-End development. Use of HTML/CSS, JavaScript, jQuery, bootstrap, Angular, Apache Cordova and Java.</li>
                         </ul>
                       </div>
                     </div>
