--- a/index.html
+++ b/index.html
@@ -1,70 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta charset="utf-8">
   <title>Antonio Vallejo</title>
-  <meta name="author" content="Antonio Vallejo">
-  <meta name="description" content="Official page of Antonio Vallejo, Industrial Engineering Student and Software Developer.">
-  <link rel="shortcut icon" href="./img/favicon.png">
-  <link rel="stylesheet" href="./css/main.css">
-  <link rel="stylesheet" href="./css/animate.min.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-  <link href="./css/bootstrap.min.css" rel="stylesheet" />
-  <link href="./css/now-ui-kit.css?v=1.2.0" rel="stylesheet" />
-</head>
-<!-- <body class="burger-menu menu-on-left"> para ver como va en moviles-->
+  <base href="/">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+<link rel="stylesheet" href="styles.cb14f4374220a08d3675.css"></head>
 <body>
-  <a href="#" ><img class="logo" src="./img/Logo.png"alt="Antonio Vallejo Fernández"></a>
-  <nav class="navbar navbar-expand-lg navbar-transparent fixed-top" color-on-scroll='100'>
-    <div class="container">
-      <a class="navbar-brand" href="#"> <img src="./img/Logo.png" width="40" height="40" alt="Antonio Vallejo Fernández"></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <i class="fas fa-bars"></i>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./about-me.html">About Me</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./resume.html">Resume</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./contact.html">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  <br><br><br>
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-8 align-self-center">
-        <h1 class="title">Welcome to my page!</h1>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <h2 class="subtitle">Interested in something?</h2>
-        <h2 class="subtitle">Click down here or on top of the page for more info!</h2>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-12 botones">
-        <button class="btn"id="abbutton">About Me</button>
-        <button class="btn"id="resbutton">Resume</button>
-      </div>
-    </div>
-  </div>
-  <script src="./js/core/jquery.min.js" type="text/javascript"></script>
-  <script src="./js/core/popper.min.js" type="text/javascript"></script>
-  <script src="./js/core/bootstrap.min.js" type="text/javascript"></script>
-  <script src="./js/now-ui-kit.js?v=1.2.0" type="text/javascript"></script>
-  <script src="./js/main.js"></script>
-</body>
+  <app-root></app-root>
+<script type="text/javascript" src="runtime.26209474bfa8dc87a77c.js"></script><script type="text/javascript" src="es2015-polyfills.b62a0c6b168f504c432e.js" nomodule></script><script type="text/javascript" src="polyfills.8bbb231b43165d65d357.js"></script><script type="text/javascript" src="main.fecb510cc758ed27bdbf.js"></script></body>
 </html>
